--- a/index.html
+++ b/index.html
@@ -595,6 +595,10 @@ Building on these ``base'' ICL algorithms, intriguingly, we show that transforme
 	<ul>[ Seminar ]
 		<li><B>Title: Application of AI Technology in the Securities and Finance Industry</B>. [<a href=""> slides </a>]</li>  
 		<li> <B>Speaker</B>: Dr. WANG Ying, Guosen Securities Co. Ltd. </li>
+		<li> <B>Abstract</B>: 
+			This talk focuses on AI applications in the securities and financial industry. First, we introduce the development of AI technologies. Second, we discuss the mainstream approaches to AI application in Fintech. Next, we will elaborate on Guosen's AI architecture design, including AI platform construction and core AI scenario applications, with a focus on how AI can help solve core challenges in these scenarios. Finally, we will explore the potential risks and future prospects of AI applications in finance.		
+		</li>
+
 		<li> <B>Bio</B>: <I>Dr. WANG Ying</I> holds a PhD in Computer Science and Engineering from the Hong Kong University of Science and Technology and a Bachelor's degree in Computer Science and Technology from the University of Science and Technology of China. She is currently an AI Architect at the Financial Technology Headquarters of Guosen Securities Co., Ltd., researching the application of AI in securities scenarios. Previously, during her doctoral studies at Huawei's 2012 Lab, her main research focus was on network resource allocation algorithms based on reinforcement learning.		</li>
 	</ul>
 	
@@ -652,12 +656,6 @@ Building on these ``base'' ICL algorithms, intriguingly, we show that transforme
 <td></td>
 </tr>
 
-		<li> <B>Abstract</B>: 
-			The existing pre-training paradigm for Large Language Models (LLMs) faces critical limitations from finite data, while test-time scaling issues amplify the Transformer's inefficiencies. 
-			This presentation analyzes architectural alternatives, beginning with linear attention, which removes the softmax operation and reformulates attention as a linear RNN to achieve O(1) inference memory. 
-			It also explores static and dynamic sparse attention mechanisms, alongside hybrid attention mechanisms that mix attention types across layers or within them to balance performance and efficiency. 
-			Experimental results confirm that these efficient architectures can match Transformer performance, thereby offering viable solutions to current scaling challenges.		
-		</li>
 
 
 	<td>09/10/2024, Wed </td>
