--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ Building on these ``base'' ICL algorithms, intriguingly, we show that transforme
 	<br>	
 	<ul>[ Seminar ]
 		<li><B>Title: Application of AI Technology in the Securities and Finance Industry</B>. [<a href=""> slides </a>]</li>  
-		<li> <B>Speaker</B>: Dr. WANG Ying, Guosen Securities Co. Ltd. </li>
+		<li> <B>Speaker</B>: Dr. WANG Ying, Guosen Securities Co., Ltd. </li>
 		<li> <B>Abstract</B>: 
 			This talk focuses on AI applications in the securities and financial industry. First, we introduce the development of AI technologies. Second, we discuss the mainstream approaches to AI application in Fintech. Next, we will elaborate on Guosen's AI architecture design, including AI platform construction and core AI scenario applications, with a focus on how AI can help solve core challenges in these scenarios. Finally, we will explore the potential risks and future prospects of AI applications in finance.		
 		</li>
