--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@ Building on these ``base'' ICL algorithms, intriguingly, we show that transforme
 <td>Lecture 11: Seminar and Student Presentations.
 	<br>	
 	<ul>[ Seminar ]
-		<li><B>Title: Application of AI Technology in the Securities and Finance Industry</B>. [<a href=""> slides </a>]</li>  
+		<li><B>Title: Application of AI Technology in the Securities and Finance Industry</B>. </li>  
 		<li> <B>Speaker</B>: Dr. WANG Ying, Guosen Securities Co., Ltd. </li>
 		<li> <B>Abstract</B>: 
 			This talk focuses on AI applications in the securities and financial industry. First, we introduce the development of AI technologies. Second, we discuss the mainstream approaches to AI application in Fintech. Next, we will elaborate on Guosen's AI architecture design, including AI platform construction and core AI scenario applications, with a focus on how AI can help solve core challenges in these scenarios. Finally, we will explore the potential risks and future prospects of AI applications in finance.		
@@ -603,10 +603,10 @@ Building on these ``base'' ICL algorithms, intriguingly, we show that transforme
 	</ul>
 	
 	<ul>[ Selected Presentations ]
-		<li>  Ming Mei, Li Xuzhi, Chen Yilin and Xie Xiaoxiao. Predicting Home Credit Default by Using Light Gradient Boosting Model. </li>
-		<li>  Kuo Yang. MAFS5440 Project 1: Home Credit Default Risk [<a href=""> slides </a>]</li>
-		<li>  Xinyu Xu, Zilong Pan and Hongen Tang. Home Credit Default Risk Assessment Based on LightGBMLinks to an external site. </li>
-		<li>  Kedeng Qiu, Zewen Wan, Yifei Song and Jiarui Jiang. Project 1: Home Credit Default Risk. </li>
+		<li>  Ming Mei, Li Xuzhi, Chen Yilin and Xie Xiaoxiao. Predicting Home Credit Default by Using Light Gradient Boosting Model.  [<a href="./project1/F25_Project1_Chen_Li_Ming_Xie.pptx"> slides </a>] </li>
+		<li>  Kuo Yang. MAFS5440 Project 1: Home Credit Default Risk [<a href="./project1/F25_Project1_YangK.pdf"> slides </a>]</li>
+		<li>  Xinyu Xu, Zilong Pan and Hongen Tang. Home Credit Default Risk Assessment Based on LightGBMLinks to an external site.  [<a href="./project1/F25_Project1_Tang_Pan_Xu.pdf"> slides </a>] </li>
+		<li>  Kedeng Qiu, Zewen Wan, Yifei Song and Jiarui Jiang. Project 1: Home Credit Default Risk.  [<a href="./project1/F25_Project1-Jiang-Song-Wan-Qiu.pptx"> slides </a>] </li>
 	</ul>	
 </td>
 <td>Y.Y.</td>
