--- a/index.html
+++ b/index.html
@@ -603,10 +603,10 @@ Building on these ``base'' ICL algorithms, intriguingly, we show that transforme
 	</ul>
 	
 	<ul>[ Selected Presentations ]
-		<li>  Ming Mei, Li Xuzhi, Chen Yilin and Xie Xiaoxiao. Predicting Home Credit Default by Using Light Gradient Boosting Model.  [<a href="./project1/F25_Project1_Chen_Li_Ming_Xie.pptx"> slides </a>] </li>
-		<li>  Kuo Yang. MAFS5440 Project 1: Home Credit Default Risk [<a href="./project1/F25_Project1_YangK.pdf"> slides </a>]</li>
-		<li>  Xinyu Xu, Zilong Pan and Hongen Tang. Home Credit Default Risk Assessment Based on LightGBMLinks to an external site.  [<a href="./project1/F25_Project1_Tang_Pan_Xu.pdf"> slides </a>] </li>
-		<li>  Kedeng Qiu, Zewen Wan, Yifei Song and Jiarui Jiang. Project 1: Home Credit Default Risk.  [<a href="./project1/F25_Project1-Jiang-Song-Wan-Qiu.pptx"> slides </a>] </li>
+		<li>  Ming Mei, Li Xuzhi, Chen Yilin and Xie Xiaoxiao. Predicting Home Credit Default by Using Light Gradient Boosting Model.  [<a href="./project1/F25_Project1_Chen_Li_Ming_Xie.pptx"> slides (pptx) </a>] </li>
+		<li>  Kuo Yang. MAFS5440 Project 1: Home Credit Default Risk [<a href="./project1/F25_Project1_YangK.pdf"> slides (pdf) </a>]</li>
+		<li>  Xinyu Xu, Zilong Pan and Hongen Tang. Home Credit Default Risk Assessment Based on LightGBMLinks to an external site.  [<a href="./project1/F25_Project1_Tang_Pan_Xu.pdf"> slides (pdf) </a>] </li>
+		<li>  Kedeng Qiu, Zewen Wan, Yifei Song and Jiarui Jiang. Project 1: Home Credit Default Risk.  [<a href="./project1/F25_Project1-Jiang-Song-Wan-Qiu.pptx"> slides (pptx) </a>] </li>
 	</ul>	
 </td>
 <td>Y.Y.</td>
